<resources>
    <string name="app_name">WTPEIT</string>
    <string name="text1">شرکت توسعه شهرک صنعتی ایوانکی</string>
    <string name="todo">TODO</string>
    <string name="text_edari">ثبت نامه</string>
    <string name="text_shekayat"> تخلفات</string>
    <string name="text_gozareshat">گزارشات</string>
    <string name="text_hosn_bahreh_bardary">حسن بهره برداری تصفیه خانه</string>
    <string name="tehosn">حسن بهره برداری</string>
    <string name="textToolbarMainActivity">صفحه      اصلی</string>
    <string name="text_signin_drawer">ورود به حساب کاربری</string>
    <string name="text_signout_drawer">خروج از حساب کاربری</string>
    <string name="text_menu">منو</string>
    <string name="text_signinuser">ورود کاربر</string>
    <string name="text_vorod">ورود</string>
    <string name="text_create_acount">ایجاد حساب</string>
    <string name="text_signup_user"> ثبت نام کاربر</string>
    <string name="register">ثبت نام</string>
    <string name="signin_signup">ورود/ثبت نام</string>
    <string name="text2">فیلدهای مربوطه خالی است!</string>
    <string name="text3">کلمه عبور با تکرار آن مطابقت ندارد!</string>
    <string name="text4">متاسفانه ارتباط با سرور برقرار نشد!</string>
    <string name="text5">نام کاربری در دسترس نیست!</string>
    <string name="text6">عزیز خوش آمدید</string>
    <string name="text_besme_taala">بسمه تعالی</string>
    <string name="text7">از : </string>
    <string name="text8">شماره نامه : </string>
    <string name="text9">تاریخ : </string>
    <string name="text10">پیوست</string>
    <string name="text11">به :</string>
    <string name="text12">موضوع :</string>
    <string name="text13">سلام علیکم</string>
    <string name="text14">با احترام،</string>
    <string name="text15">ثبت</string>
    <string name="text16">ثبت شده توسط :</string>
    <string name="text17">نامه های اداری ثبت شده</string>
    <string name="text18">به :</string>
    <string name="t19">سمت :</string>
    <string name="t20">"نام و نام خانوادگی : "</string>
    <string name="t21">ثبت نامه اداری</string>
    <string name="t22">ثبت تخلف</string>
    <string name="t23">نام شرکت :</string>
    <string name="t24">نام مدیرعامل :</string>
    <string name="t25">نوع تولید :</string>
    <string name="t26">آدرس :</string>
    <string name="t27">تلفن :</string>
    <string name="t28">نام و نام خانوادگی  ثبت کننده  تخلف :</string>
    <string name="t29">تاریخ ثبت تخلف :</string>
    <string name="t30">موضوع تخلف :</string>
    <string name="t31">شرح تخلف :</string>
    <string name="t32">انتخاب عکس از گالری</string>
    <string name="t33">نام شرکت :</string>
    <string name="t34">نام مدیر عامل :</string>
    <string name="t35">تاریخ ثبت تخلف :</string>
    <string name="t36">تخلفات ثبت شده</string>
    <string name="t37">نوع تولید :</string>
    <string name="t38">ثبت کننده تخلف :</string>
    <string name="t39">توضیحات :</string>
    <string name="t40">فرم اندازه گیری پارامترهای آزمایشگاهی تصفیه خانه</string>
    <string name="t41">نوع  پارامتر :</string>
    <string name="t42">محل نمونه برداری :</string>
    <string name="t43">مقدار اندازه گیری شده :</string>
    <string name="t44">مقدار مجاز :</string>
    <string name="t45">شماره نمونه :</string>
    <string name="t46">نتایج اندازه گیری پارامترها</string>
    <string name="t47">تاریخ نمونه برداری :</string>
    <string name="t48">فرم مربوط به نتایج میانگین پارامترهای آزمایشگاهی</string>
    <string name="t49">فرم مربوط به مقادیر لجن و دانه و آشغال تصفیه خانه</string>
    <string name="t50">فرم مربوط به گند زدایی پساب تصفیه خانه</string>
    <string name="t51">فرم مربوط به نگهداری و تعمیرات برق و ابزار دقیق تصفیه خانه</string>
    <string name="t52">فرم مربوط به نگهداری و تعمیرات تجهیزات مکانیکی تصفیه خانه</string>
    <string name="t53">فرم مربوط به حوادث،قطعی برق،تجهیزات متوقف</string>
    <string name="t54">فرم مربوط به بازسازی،نوسازی،رنگ آمیزی</string>
    <string name="t55">فرم مربوط به کارکرد ماهانه بلوئرها و پمپ های ایستگاه پمپاژ</string>
    <string name="t56">نتایج میانگین پارامترهای آزمایشگاهی</string>
    <string name="t57">دبی برآوردی (m3/d)</string>
    <string name="t58">BOD :</string>
    <string name="t59">ورودی</string>
    <string name="t60">خروجی</string>
    <string name="t61">COD :</string>
    <string name="t62">TSS :</string>
    <string name="t63">** پارامترهای کیفی **</string>
    <string name="t64">TKN :</string>
    <string name="t65">TP :</string>
    <string name="t66">MLSS :</string>
    <string name="t67">هوادهی 1</string>
    <string name="t68">هوادهی 2</string>
    <string name="t69">هوادهی 3</string>
    <string name="t70">هوادهی 4</string>
    <string name="t71">هوادهی 5</string>
    <string name="t72">هوادهی 6</string>
    <string name="t73">DO :</string>
    <string name="t74">*میانگین هندسی تعداد فیکال کلیفرم (در هر 100ml پسآب خروجی) :</string>
    <string name="t75">*میانگین هندسی تعداد  کلیفرم (در هر 100ml پسآب خروجی) :</string>
    <string name="t76">گزارشات حسن بهره برداری</string>
    <string name="t77">دبی برآوردی (m3/d) : </string>
    <string name="t78"># BOD :</string>
    <string name="t79">ورودی :</string>
    <string name="t80">خروجی :</string>
    <string name="t81"># COD :</string>
    <string name="t82"># TSS :</string>
    <string name="t83"># TKN :</string>
    <string name="t84"># TP :</string>
    <string name="t85"># MLSS :</string>
    <string name="t86">هوادهی 1 :</string>
    <string name="t87">هوادهی 2 :</string>
    <string name="t88">هوادهی 3 :</string>
    <string name="t89">هوادهی 4 :</string>
    <string name="t90">هوادهی 5 :</string>
    <string name="t91">هوادهی 6 :</string>
    <string name="t92"># DO :</string>
    <string name="t93"> مقادیر لجن،دانه و آشغال تصفیه خانه</string>
    <string name="t94"> * لجن برگشتی :</string>
    <string name="t95">مقدار (m3/d)</string>
    <string name="t96">غلظت (%)</string>
    <string name="t97"> * لجن مازاد دفعی :</string>
    <string name="t98"> * لجن ورودی به واحد آبگیری :</string>
    <string name="t99"> * لجن خروجی از تصفیه خانه :</string>
    <string name="t100">مقدار (kg/month)</string>
    <string name="te1">مقدار آشغال جمع آوری شده (kg/month)</string>
    <string name="te2">مقدار دانه جمع آوری شده (kg/month)</string>
    <string name="te3">مقدار (m3/d) :</string>
    <string name="te4">غلظت (%) :</string>
    <string name="te5">مقدار (kg/month) :</string>
    <string name="te6">مقدار آشغال جمع آوری شده (kg/month) :</string>
    <string name="te7">مقدار دانه جمع آوری شده (kg/month) :</string>
    <string name="te8">گند زدایی پساب تصفیه خانه</string>

    <string name="te9">دوز کلر تزریقی (mg/l) :</string>
    <string name="te10">دبی فاضلاب (m3/day) :</string>
    <string name="te11">کلر باقیمانده پساب(mg/l) :</string>
    <string name="te12">کلیفرم کل(MPN/100ml) :</string>
    <string name="te13">کلیفرم گرماپای(MPN/100ml) :</string>
    <string name="te14">مدت زمان قطع تزریق(hr) :</string>
    <string name="te15">علت قطع تزریق :</string>
    <string name="te16">پیگیری های انجام شده :</string>
    <string name="te17">شستشوی مخزن :</string>


    <string name="te18">نگهداری و تعمیرات برق و ابزار دقیق تصفیه خانه</string>
    <string name="te19">نام تجهیز :</string>
    <string name="te20">محل استقرار :</string>
    <string name="te21">مدول:</string>
    <string name="te22">عیب و علت عیب:</string>
    <string name="te23">نوع فعالیت:</string>
    <string name="te24">شرح فعالیت:</string>
    <string name="te25">قطعه مصرفی:</string>
    <string name="te26">تعداد قطعه مصرفی:</string>
    <string name="te27">افراد یا شرکت انجام دهنده:</string>
    <string name="te28">تعداد نفرات:</string>
    <string name="te29">هزینه قطعه(ریال) :</string>
    <string name="te30">هزینه نیروی انسانی(ریال) :</string>
    <string name="te31">هزینه تعمیر خارج از کارگاه(ریال) :</string>
    <string name="te32">نگهداری و تعمیرات تجهیزات مکانیکی تصفیه خانه</string>
    <string name="te33">نوع فعالیت (تعویض / تعمیر):</string>

    <string name="txt1">حوادث، قطعی برق، تجهیزات متوقف</string>
    <string name="txt2">حوادث</string>
    <string name="txt3">قطعی برق</string>
    <string name="txt4">تجهیزات متوقف</string>
    <string name="txt5">محل وقوع حادثه :</string>
    <string name="txt6">شرح حادثه :</string>
    <string name="txt7">علت حادثه :</string>
    <string name="txt8">اقدامات انجام شده :</string>
    <string name="txt9">خسارت جانی :</string>
    <string name="txt10">خسارت مالی :</string>
    <string name="txt11">پیشنهاد :</string>


    <string name="txt12">علت قطعی :</string>
    <string name="txt13">زمان شروع :</string>
    <string name="txt14">زمان پایان :</string>
    <string name="txt15">مدت خاموشی :</string>

    <string name="txt16">تاریخ شروع توقف :</string>
    <string name="txt17">تاریخ پایان توقف :</string>
    <string name="txt18">علت توقف :</string>
    <string name="txt19">فعالیت انجام شده :</string>


    <string name="tet1"> بازسازی،نوسازی،رنگ آمیزی</string>
    <string name="tet2"> رنگ آمیزی</string>
    <string name="tet3"> بازسازی و نوسازی</string>
    <string name="tet4"> تاریخ شروع :</string>
    <string name="tet5"> تاریخ پایان :</string>
    <string name="tet6"> واحد و قسمت رنگ آمیزی شده :</string>
    <string name="tet7"> نوع رنگ :</string>
    <string name="tet8"> میزان رنگ مصرفی :</string>
    <string name="tet9">هزینه رنگ آمیزی (ریال) :</string>
    <string name="tet10">محل :</string>
    <string name="tet11">مجری :</string>
    <string name="tet12">هزینه (ریال) :</string>


    <string name="tet13">کارکرد ماهانه بلوئرها و پمپ های ایستگاه پمپاژ</string>
    <string name="tet14">کارکرد بلوئرها</string>
    <string name="tet15">کارکرد پمپ ها</string>
    <string name="tet16">بلوئر : </string>
    <string name="tet17">کارکرد قبلی : </string>
    <string name="tet18">کارکرد فعلی : </string>
    <string name="tet19">ساعت کارکرد : </string>
    <string name="tet20">انجام تعویض روغن : </string>
    <string name="tet21">تعویض روغن بعدی : </string>
    <string name="tet22">پمپ : </string>
    <string name="tet23">سرویس دوره ای : </string>
    <string name="tet24">وضعیت سلامت کارکرد : </string>
    <string name="tet25">تمامی حقوق این برنامه متعلق به شرکت خدماتی توسعه شهرک صنعتی ایوانکی است. </string>
    <string name="tet26">نسخه : 1.0 </string>
    <string name="tet27">تاریخ انتشار : 1399.12.01</string>
    <string name="tet28">طراح و ایده پرداز :</string>
    <string name="tet29"> جواد شیرزادنیا</string>
    <string name="tet30"> ارتباط با برنامه نویس :</string>
    <string name="tet31"> tijanima.71@gmail.com</string>



</resources>