<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".ActivityAboutWe">

    <RelativeLayout
        android:id="@+id/relative1"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="190dp">

        <ImageView
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/imgIcon"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:textColor="@color/white"
            android:id="@+id/txvNameApp"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:layout_below="@+id/imgIcon"
            android:text="@string/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />




    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/relative1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:fontFamily="@font/behdad"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tet25"
            android:textSize="11sp"
            android:textColor="#0A0A0A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:fontFamily="@font/behdad"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tet26"
            android:textSize="13sp"
            android:textColor="#0A0A0A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:fontFamily="@font/behdad"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tet27"
            android:textSize="13sp"
            android:textColor="#0A0A0A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:fontFamily="@font/behdad"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/tet28"
            android:textSize="14sp"
            android:textColor="#0A0A0A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:fontFamily="@font/behdad"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tet29"
            android:textSize="15sp"
            android:textColor="#0A0A0A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:fontFamily="@font/behdad"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/tet30"
            android:textSize="14sp"
            android:textColor="#0A0A0A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:fontFamily="@font/behdad"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/tet31"
            android:textSize="10sp"
            android:textColor="#304FFE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:fontFamily="@font/behdad"
            android:textDirection="ltr"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Abolfazl Tijani"
            android:textSize="10sp"
            android:textColor="#304FFE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




    </LinearLayout>





</RelativeLayout>