<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_style"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".ActivityEdaryLater">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layoutDirection="rtl">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t21"
                android:textColor="@color/icons"
                android:textSize="20sp"
                android:textStyle="bold"

                />

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>
    <ProgressBar
        android:id="@+id/progressbarActivityEdaryLater"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:backgroundTint="#fff"
        android:indeterminate="true"
        android:indeterminateTint="#16B24D"
        android:max="100"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:padding="4dp"
        android:text="@string/text_besme_taala"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">

        <EditText

            android:layout_alignParentRight="true"
            android:id="@+id/edt_activity_edary_shomarehNameh"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_shape"
            android:gravity="center"
            android:hint="@string/text8"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_centerInParent="true"
            android:textStyle="bold"

            android:id="@+id/txv_activity_edary_Date"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edt_shape"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/text9"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:layout_alignParentLeft="true"
            android:id="@+id/edt_activity_edary_peyvast"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_shape"
            android:gravity="center"
            android:hint="پیوست :"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="14sp"

            />




    </RelativeLayout>



    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="6dp"
                android:padding="4dp"
                android:text="@string/text7"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_activity_edary_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:gravity="right"
                android:padding="15dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#626362"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="6dp"
                android:padding="4dp"
                android:text="@string/text11"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_activity_edary_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:gravity="right"
                android:padding="15dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#626362"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="6dp"
                android:padding="4dp"
                android:text="@string/text12"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_activity_edary_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:gravity="right"
                android:padding="15dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#626362"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="6dp"
                android:padding="4dp"
                android:text="@string/text13"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="6dp"
                android:padding="4dp"
                android:text="@string/text14"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_activity_edary_describtion"
                android:maxLines="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="100dp"
                android:background="@drawable/rounded_corner"
                android:gravity="right"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#626362"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_activity_edary_semat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corner"
                android:gravity="right"
                android:hint="سمت ..."
                android:padding="15dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#626362"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edt_activity_edary_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:gravity="right"
                android:hint="نام و نام خوانوادگی ..."
                android:padding="15dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#626362"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_activity_edary_sabt"
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_shape"
                android:text="@string/text15"
                android:textColor="@color/icons"
                android:textSize="20sp"
                android:layout_marginBottom="40dp"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>