<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_style"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".ActivityAverageResult">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layoutDirection="rtl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tet15"
                android:textColor="@color/icons"
                android:textSize="20sp"
                android:textStyle="bold"

                />

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progressbarActivityPomps"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:backgroundTint="#fff"
        android:indeterminate="true"
        android:indeterminateTint="#16B24D"
        android:max="100"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            ///


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edt_activityPomps_numberPomps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginRight="30dp"
                    android:drawablePadding="20dp"
                    android:gravity="center"
                    android:hint="@string/tet22"
                    android:inputType="text"
                    android:textColor="#1b5e20"
                    android:textDirection="ltr"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/edt_activityPomps_karkardQabli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginRight="30dp"
                    android:drawablePadding="20dp"
                    android:gravity="center"
                    android:hint="@string/tet17"
                    android:inputType="text"
                    android:textColor="#1b5e20"
                    android:textDirection="ltr"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/edt_activityPomps_karkardFeli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginRight="30dp"
                    android:drawablePadding="20dp"
                    android:gravity="center"
                    android:hint="@string/tet18"
                    android:inputType="text"
                    android:textColor="#1b5e20"
                    android:textDirection="ltr"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/edt_activityPomps_saateKarkard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginRight="30dp"
                    android:drawablePadding="20dp"
                    android:gravity="center"
                    android:hint="@string/tet19"
                    android:inputType="text"
                    android:textColor="#1b5e20"
                    android:textDirection="ltr"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/edt_activityPomps_servisDowrehee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginRight="30dp"
                    android:drawablePadding="20dp"
                    android:gravity="center"
                    android:hint="@string/tet23"
                    android:inputType="text"
                    android:textColor="#1b5e20"
                    android:textDirection="ltr"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/edt_activityPomps_vazeyatSalamatKarKard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginRight="30dp"
                    android:drawablePadding="20dp"
                    android:gravity="center"
                    android:hint="@string/tet24"
                    android:inputType="text"
                    android:textColor="#1b5e20"
                    android:textDirection="ltr"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>


            ///


            <Button
                android:id="@+id/btn_activityPomps_sabt"
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/btn_shape"
                android:text="@string/text15"
                android:textColor="@color/icons"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>